added materilialize framework

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "artyom.js": "^1.0.6",
     "axios": "^0.17.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "15.x",
+    "react-dom": "15.x",
     "react-geolocated": "^2.2.1",
+    "react-materialize": "^1.1.0",
     "react-scripts": "1.0.17"
   },
   "scripts": {
