--- a/package.json
+++ b/package.json
@@ -15,12 +15,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "homepage": "http://josephpung.github.io/voice_weather",
-  "devDependencies": {
-    "gh-pages": "^1.1.0"
+    "eject": "react-scripts eject"
   }
 }
